--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "css-paint-polyfill": "^3.4.0",
+    "javascript-color-gradient": "^2.4.4",
+    "leaflet": "^1.8.0",
     "next": "latest",
     "next-compose-plugins": "^2.2.1",
     "next-with-polyfill": "^0.1.5",
@@ -15,7 +17,9 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-leaflet": "^4.0.2",
+    "voronoi": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
