--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.2",
+    "react-spinners": "^0.13.4",
     "voronoi": "^1.0.0"
   },
   "devDependencies": {
